<resources>
    <string name="app_name" translatable="false">questtime</string>
    <string name="search_quests" translatable="false">Play Quests</string>
    <string name="find">search</string>
    <string name="default_title" translatable="false">Learn Android in 3 steps</string>
    <string name="default_author" translatable="false">Lev Saskov</string>
    <string name="default_info">0 downloads</string>
    <string name="downloads_info">%1$d downloads</string>>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum.
    </string>
    <string name="lorem_ipsum2" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
        dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
        officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
        qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="image_description">Image</string>
    <string name="play_button">Play</string>
    <string name="delete_button">Delete</string>
    <string name="download_and_play_button">Play</string>
    <string name="download_button">Download</string>
    <string name="edit_button">Edit</string>
    <string name="favorite_button">Favorite</string>
    <string name="unfavorite_button">Unfavorite</string>
    <string name="search_button">Search</string>
    <string name="search_text">Search for…</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_library">Library</string>
    <string name="title_external">External</string>
    <string name="title_editor">Editor</string>
    <string name="title_settings">Settings</string>
    <string name="play">Play</string>
    <string name="some_content">Some Content</string>
    <string name="language_settings">Language:</string>
</resources>