<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/blog_item_fragment__IIContent"
              android:layout_width="match_parent"
              android:layout_height="120dp"
              android:paddingTop="8dp"
              android:paddingBottom="8dp"
              android:paddingLeft="8dp"
              android:paddingRight="8dp"
              android:background="?android:attr/selectableItemBackground">

    <ImageView
            android:layout_width="104dp"
            android:id="@+id/imageView"
            android:layout_height="104dp" tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:scaleType="fitXY" android:contentDescription="@string/image_description"/>
    <LinearLayout
            android:id="@+id/blog_item_fragment__main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="?android:attr/selectableItemBackground" android:layout_weight="4">

        <TextView
                android:id="@+id/quest_item_fragment__titleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/default_title"
                android:paddingBottom="4dp" android:textAlignment="viewStart" android:maxLines="1"
                android:ellipsize="end" android:textStyle="bold"/>

        <TextView
                android:id="@+id/quest_item_fragment__descriptionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/lorem_ipsum"
                android:textSize="14sp" android:textAlignment="viewStart"/>

    </LinearLayout>

</LinearLayout>
