<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_preview_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.preview.QuestPreviewFragment">

    <ScrollView
            android:id="@+id/fragment_preview__scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fragment_preview__main_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".screen.preview.QuestPreviewFragment">

            <LinearLayout
                    android:id="@+id/fragment_preview__main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <ImageView
                        android:id="@+id/fragment_preview__image"
                        android:layout_width="156dp"
                        android:layout_height="156dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/image_description"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_launcher_background"/>

                <LinearLayout
                        android:id="@+id/fragment_preview__data"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp">

                    <TextView
                            android:id="@+id/fragment_preview__title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:gravity="bottom"
                            android:maxLines="8"
                            android:paddingBottom="4dp"
                            android:text="@string/default_title"
                            android:textSize="28sp"
                            android:textStyle="bold"/>

                    <TextView
                            android:id="@+id/fragment_preview__author"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="4dp"
                            android:text="@string/default_author"
                            android:textAlignment="viewStart"
                            android:textSize="20sp"/>

                    <TextView
                            android:id="@+id/fragment_preview__info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="4dp"
                            android:text="@string/default_info"
                            android:textAlignment="viewStart"
                            android:textSize="18sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/fragment_preview__actions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fragment_preview__main">

                <Button
                        android:id="@+id/fragment_preview__left_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="1"
                        android:text="@string/delete_button"/>

                <Button
                        android:id="@+id/fragment_preview__right_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="1"
                        android:text="@string/favorite_button"/>
            </LinearLayout>

            <View
                    android:id="@+id/fragment_preview__separator"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="#807E7E7E"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_preview__actions"/>

            <TextView
                    android:id="@+id/fragment_preview__description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="80dp"
                    android:ellipsize="end"
                    android:gravity="top"
                    android:padding="8dp"
                    android:text="@string/lorem_ipsum2"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_preview__separator"
                    app:layout_constraintVertical_bias="0.0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fragment_preview__playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?colorPrimary"
            android:contentDescription="@string/play_button"
            android:src="@drawable/ic_play_white_24dp"
            app:backgroundTint="?colorPrimaryVariant"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:useCompatPadding="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>

