<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_library_item__main"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="?android:attr/selectableItemBackground"
>

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment_library_item__image"
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/image_description"
            android:padding="1dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_foreground"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fragment_library_item__data"
            />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_library_item__data"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toStartOf="@+id/fragment_library_item__playButton"
            app:layout_constraintStart_toEndOf="@+id/fragment_library_item__image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    >

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment_library_item__title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:gravity="start|top"
                android:text="@string/default_title"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/fragment_library_item__description"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment_library_item__description"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="2dp"
                android:gravity="start|top"
                android:text="@string/lorem_ipsum"
                android:textAlignment="viewStart"
                android:textSize="12sp"
                android:maxLines="4"
                android:ellipsize="end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_library_item__title"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fragment_library_item__playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?colorPrimary"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_play_black_24dp"
            app:borderWidth="0dp"
            app:useCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fragment_library_item__data"/>

</androidx.constraintlayout.widget.ConstraintLayout>
